k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: 266735804784.dkr.ecr.ap-northeast-2.amazonaws.com/prod-app-repo:latest
          ports:
            - containerPort: 8080
